<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notekeeper.MainActivity">
    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/menu_string_cancel"/>
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="101"
        android:title="@string/menu_next"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="102"
        android:title="@string/send_as_email"
        app:showAsAction="never"/>
    <item
        android:orderInCategory="103"
        android:title="set Reminder"
        android:id="@+id/action_reminder_menu"/>

</menu>
